--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-theme: jekyll-theme-tactile
+title: '鄢涛的个人博客'
+description: 'web前端开发，个人资料整理'
+keyword: '鄢涛，web，前端，个人博客，vue,node,js,分享'
+url: '' # 暂无
 
-Tactileadasdas11111111111
-
-Tactileadasdas111111222222222222222222
+# 暂无！
